# game-3D-tutorial-env

./: .gitignore  CMakeLists.txt  CMakeUserPresets.json  README.md  vcpkg.json
config/: plugins.cfg
demo/: CMakeLists.txt  README.md
demo/01-glfw/: CMakeLists.txt  main.cpp
demo/02-bgfx/: main.cpp
demo/03-hello-world/: CMakeLists.txt  main.cpp
demo/03-hello-world/include/: logo.h
demo/04-opengl/: CMakeLists.txt  README.md  main.cpp
demo/05-ogre/: README.md  main.cpp
demo/05-ogre/config/: resources.cfg
demo/06-ogre-2/: main.cpp
demo/06-ogre-2/config/: plugins.cfg
demo/07-ogre-3/: CMakeLists.txt
docs/bgfx/: README.md
include/: app.h  bgfx_glfw.h
src/: app.cpp  bgfx_glfw.cpp
tools/: CMakeUserPresets.json  shade.js
